<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="add_note">Type anything…</string>
    <string name="del_note">To delete, go back and press the trash icon.</string>
    <string name="empty_list">It\'s empty, note down things here!</string>
    <string name="empty_bin">Nothing found to restore or delete, keep noting!</string>
    <string name="empty_list_image">It\'s Empty</string>
    <string name="copy">Copy</string>
    <string name="bin">Trash</string>
    <string name="edit">Edit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="upgrade">Upgrade</string>
    <string name="search">Type to search…</string>
    <string name="settings">Settings</string>
    <string name="the_simplest_note_taking_app">The simplest note taking app!</string>
    <string name="type_note">Notes</string>
    <string name="about">About</string>
    <string name="backup">Backup</string>
    <string name="important">Bookmarked</string>
    <string name="important_caps">BOOKMARKED</string>
    <string name="delete">Delete</string>
    <string name="notes">Notes</string>
    <string name="all_notes">Notes</string>
    <string name="application">Application</string>
    <string name="note_down_everything_you_need">Note down everything you need!</string>
    <string name="note_title_optional">Title</string>
    <string name="premium">Premium</string>
    <string name="upgrade_to_enjoy_an_ad_free_experience_and_get_assured_of_lifetime_premium_with_all_new_feature_additions">Upgrade to enjoy an ad-free experience and get assured of lifetime premium with all new feature additions!</string>
    <string name="restore">RESTORE</string>
    <string name="redeem_promo_code">REDEEM PROMO CODE</string>
    <string name="already_purchased_but_uninstalled_ncontact_hello_praveen_io_or_hellopraveenio_nto_get_back_your_premium_status">Need Assistance? Contact hello@praveen.io (or) @HelloPraveenIO to get back your Premium status!</string>
    <string name="you_re_not_premium">You\'re not premium!</string>
</resources>
