<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".ProActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:scaleType="center"
            android:src="@drawable/propen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            android:animateLayoutChanges="true"
            android:id="@+id/pro_head"
            android:text="@string/you_re_not_premium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:id="@+id/pro_text"
            android:textSize="16sp"
            android:textColor="@color/colorSecondaryText"
            android:animateLayoutChanges="true"
            android:text="@string/upgrade_to_enjoy_an_ad_free_experience_and_get_assured_of_lifetime_premium_with_all_new_feature_additions"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/pro_ll"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_gravity="center"
                android:layout_width="160dp"
                android:id="@+id/pro_upgrade"
                android:layout_height="wrap_content"
                android:textColor="@color/colorIcons"
                android:text="@string/upgrade"
                android:backgroundTint="@color/colorPrimary"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_gravity="center"
                android:layout_width="160dp"
                android:id="@+id/pro_restore"
                android:layout_height="wrap_content"
                android:textColor="@color/colorIcons"
                android:text="@string/restore"
                android:backgroundTint="@color/colorPrimary"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Button
            android:layout_gravity="center"
            android:layout_width="240dp"
            android:id="@+id/pro_redeem"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIcons"
            android:text="@string/redeem_promo_code"
            android:backgroundTint="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:id="@+id/pro_help"
            android:text="@string/already_purchased_but_uninstalled_ncontact_hello_praveen_io_or_hellopraveenio_nto_get_back_your_premium_status"/>

    </LinearLayout>

</FrameLayout>